--- a/www/styles/style.css
+++ b/www/styles/style.css
@@ -104,6 +104,9 @@ nav ul {
 .black {
     background: #000;
 }
+.black .dropdown-content{
+    background: #000;
+}
 
 nav ul li {
     display: inline-block;
@@ -786,6 +789,7 @@ grid-row-end: -1;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
     text-align: left;
+    border-radius: 7px;
   }
   
   /* Links inside the dropdown */
