--- a/www/styles/style.css
+++ b/www/styles/style.css
@@ -96,6 +96,7 @@ nav ul {
   }
 .social-media{
     align-self: center;
+    padding-right: 40px;
 }
 .social-media svg{
     margin-right: 6px;
@@ -110,7 +111,11 @@ nav ul {
 
 nav ul li {
     display: inline-block;
-    padding: 16px 40px;;
+    padding: 16px 6px;;
+}
+#nav-social-language{
+    display: flex;
+    justify-content: center;
 }
 
 nav ul li a {
@@ -782,6 +787,7 @@ grid-row-end: -1;
   .dropdown {
     position: relative;
     display: inline-block;
+    align-self: center;
   }
   
   /* Dropdown Content (Hidden by Default) */
