--- a/www/styles/style_especialistas.css
+++ b/www/styles/style_especialistas.css
@@ -104,6 +104,9 @@ nav ul {
 .black {
   background: #000;
 }
+.black .dropdown-content{
+  background: #000;
+}
 
 nav ul li {
   display: inline-block;
@@ -216,6 +219,11 @@ nav ul li a {
   background-color: red;
   height: 8px;
   margin-bottom: -2px;
+}
+@media(min-width: 993px) {
+  #content-first-page{
+      height: calc( 100vh - 190px );
+  }
 }
 
 
@@ -389,7 +397,7 @@ grid-row-end: -1;
   
 }
 #our-culture{
-  width: 222px;
+  width: 252px;
   height: 46px;
   padding: 15px 40px;
   background: #ED1C23;
@@ -406,7 +414,7 @@ grid-row-end: -1;
   border:none;
 }
 #our-culture:hover{
-  transform: scale(1.1);
+  transform: scale(1.05);
 }
 
 @media(max-width: 1250px) {
@@ -786,6 +794,7 @@ grid-row-end: -1;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
   text-align: left;
+  border-radius: 7px;
 }
 
 /* Links inside the dropdown */
@@ -828,11 +837,11 @@ grid-row-end: -1;
       color: rgb(119, 119, 119);
       }
       .social-media svg:hover {
-          transform: scale(1.1);
+          transform: scale(1.05);
           cursor: pointer;
           }
           .logo:hover {
-              transform: scale(1.05);
+              transform: scale(1.03);
               cursor: pointer;
               }
 
@@ -949,13 +958,14 @@ body {
 #different_sectors{
   width:auto;
   display: flex;
-  justify-content: space-around;
+  justify-content: left; /* ALTERADO 10/08/2021 09H52*/
   background: #212121;
   height: 459px;
   color: white;
   margin-bottom: 0px;
 }
 #especialists_text{
+  margin-left: 10%; /* ALTERADO 10/08/2021 09H52*/
   font-family: Ubuntu;
   font-style: normal;
   font-weight: 300;
@@ -975,6 +985,7 @@ body {
 #number_4{
   /*padding-right: 100px;*/
   align-self:center;
+  margin-left: 10%; /* ALTERADO 10/08/2021 09H52*/
   margin-right:100px;
 }
 
@@ -1113,6 +1124,11 @@ body {
   #second_two_icons{
     margin-right: 0%;
   }
+  
+  .svg_sectors{
+      display: flex;
+      align-self: center;
+  }
 }
 
 /*Mobile*/
@@ -1153,7 +1169,6 @@ body {
   flex-direction: column;
   height: 360px;
   background: #212121;
-  margin-bottom:50px; /* temporário */
   color:white;
 }
 
@@ -1321,38 +1336,232 @@ body {
 
 #contact-us{
   background: #F5F5F5;
+  padding-top: 100px;
+  padding-bottom: 20px;
 }
 #contact-us-post-form p{
-  font-family: Montserrat;
+  font-family: 'Montserrat';
   font-style: normal;
   font-weight: normal;
   font-size: 12px;
   line-height: 16px;
   letter-spacing: 0.4px;
   color: rgba(33, 33, 33, 0.6);
+  width: 450px;
+  margin-left: 5px;
 }
 #terms-conditions{
   display: flex;
-  justify-content: center;
+  justify-content: left;
+  width: 450px;
 }
 .input-contact{
-  font-family: Montserrat;
+  font-family: 'Montserrat';
   font-style: normal;
   font-weight: normal;
   font-size: 14px;
   line-height: 20px;
   letter-spacing: 0.25px;
   color: #737373;
+  width: 450px;
+  height: 50px;
+  background: #F9F9F9;
+  border: 1px solid #E6E6E6;
+  box-sizing: border-box;
+  border-radius: 5px;
+  padding-left: 10px;
+  padding-right: 5px;
+}
+#agree{
+  background: #FFFFFF;
+  border: 1px solid #DCDCDC;
+  box-sizing: border-box;
+  border-radius: 5px;
+  width: 25px;
+  height: 25px;
+}
+#submit-button-contact{
+  font-family: 'Ubuntu';
+  font-style: normal;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 16px;
+  text-align: center;
+  letter-spacing: 1.25px;
+  text-transform: uppercase;
+  color: #FFFFFF;
+  background: #ED1C23;
+  border-radius: 5px;
+  padding: 15px 40px;
+  border: none;
+  width: 450px;
+}
+#submit-button-contact:hover{
+  transform: scale(1.05);
+}
+.input-message{
+  /*height: 150px;*/
+  padding: 15px 5px 135px 10px;
+  overflow: hidden;
+  resize: none;
+}
+#contact-us-phone-btn{
+  background: #ED1C23;
+  border-radius: 5px;
+  flex: none;
+  order: 0;
+  flex-grow: 0;
+  width: 240px;
+  height: 54px;
+  margin-top: 40px;
+  border: none;
+}
+
+#contact-us-phone-btn:hover{
+  transform: scale(1.05);
+
+}
+#contact-us-talk-with-us{
+  font-family: 'Ubuntu';
+  font-style: normal;
+  font-weight: 300;
+  font-size: 98px;
+  line-height: 112px;
+  letter-spacing: -1.5px;
+  color: #ED1C23;
+}
+.hover_social_media{
+  cursor: pointer;
+}
+#contact-us{
+    display: flex;
+    justify-content: space-between;
+}
+#contact-us-text-div{
+    width: 40%;
+    padding-left: 10%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding-bottom: 130px;
+  
+}
+#contact-us-img{
+    padding-top: 50px;
+}
+#contact-us-phone-btn-mobile{
+    display: none;
+}
+
+
+@media only screen and (max-width: 1350px) {
+  #contact-us-text-div{
+      padding-left: 3%;
+  }
+}
+@media only screen and (max-width: 1200px) {
+  #contact-us-img{
+      display: none;
+  }
+  #contact-us{
+      justify-content: space-around;
+  }
+}
+
+@media only screen and (max-width: 1050px) {
+  #contact-us-phone-btn{
+      display: none;
+  }
+  #contact-us-phone-btn-mobile{
+      display: block;
+      background: #ED1C23;
+      border-radius: 5px;
+      flex: none;
+      order: 0;
+      flex-grow: 0;
+      width: 75px;
+      height: 45px;
+      border: none;
+  }
+  #contact-us-text-div{
+      text-align: center;
+      width: 100%;
+      padding: 0;
+      margin: 0;
+      margin-left: 5%;
+      margin-right: 5%;
+  }
+  #submit-div-contact{
+      margin-bottom: 15px;
+  }
+  #contact-us{
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      padding-top: 10px;
+  }
+  #submit-div-contact{
+      display: flex;
+      justify-content: space-around;
+  }
+  .input-contact{
+      width: 100%;
+  }
+  #contact-us-form{
+      width: 100%;
+  }
+  #contact-us-post-form{
+      margin-left: 5%;
+      margin-right: 5%;
+  }
+  #terms-conditions, #contact-us-post-form p{
+      width: 100%;
+  }
+  #submit-button-contact{
+      width: 100%;
+      margin-left: 10px;
+  }
+  #contact-us-text-div{
+      margin-top: 15px;
+      margin-bottom: 15px;
+  }
+}
+@media only screen and (max-width: 700px) {
+  #contact-us-talk-with-us{
+      font-size: 70px;
+  }
+}
+
+@media only screen and (max-width: 500px) {
+  #contact-us-talk-with-us{
+      font-family: 'Ubuntu';
+      font-style: normal;
+      font-weight: normal;
+      font-size: 35px;
+      line-height: 36px;
+      text-align: center;
+      letter-spacing: 0.25px;
+      color: #FFFFFF;
+      padding-top: 20px;
+      padding-bottom: 10px;
+  }
+  #contact-us-text-div{
+      background: #2D2D2D;
+      margin: 0px;
+      margin-bottom: 35px;
+  }
+  #contact-us{
+      padding-top: 0px;
+  }
+  #submit-div-contact{
+      margin-bottom: 25px;
+  }
+  .other-color{
+      color:red;
+  }
 }
 
 
 
-
-
-
-.hover_social_media svg:hover {
-  transform: scale(1.1);
-  cursor: pointer;
-  }
 
 /* CONTACT US - FIM */
