--- a/www/styles/style_especialistas.css
+++ b/www/styles/style_especialistas.css
@@ -96,6 +96,7 @@ nav ul {
 }
 .social-media{
   align-self: center;
+  padding-right: 40px;
 }
 .social-media svg{
   margin-right: 6px;
@@ -110,7 +111,11 @@ nav ul {
 
 nav ul li {
   display: inline-block;
-  padding: 16px 40px;;
+  padding: 16px 6px;;
+}
+#nav-social-language{
+  display: flex;
+  justify-content: center;
 }
 
 nav ul li a {
@@ -782,6 +787,7 @@ grid-row-end: -1;
 .dropdown {
   position: relative;
   display: inline-block;
+  align-self: center;
 }
 
 /* Dropdown Content (Hidden by Default) */
@@ -958,14 +964,14 @@ body {
 #different_sectors{
   width:auto;
   display: flex;
-  justify-content: left; /* ALTERADO 10/08/2021 09H52*/
+  justify-content: left;
   background: #212121;
   height: 459px;
   color: white;
   margin-bottom: 0px;
 }
 #especialists_text{
-  margin-left: 10%; /* ALTERADO 10/08/2021 09H52*/
+  margin-left: 10%;
   font-family: Ubuntu;
   font-style: normal;
   font-weight: 300;
@@ -985,7 +991,7 @@ body {
 #number_4{
   /*padding-right: 100px;*/
   align-self:center;
-  margin-left: 10%; /* ALTERADO 10/08/2021 09H52*/
+  margin-left: 10%; 
   margin-right:100px;
 }
 
@@ -1019,6 +1025,7 @@ body {
      /* flex: 0 0 80px;*/
 
       text-align: center;
+      margin-left: 0%;
   }
   #dot_point{
   
@@ -1039,6 +1046,7 @@ body {
       text-align: center;
       */
       padding-bottom: 30px;
+      margin-top: 54px;
   }
 }
 
@@ -1056,6 +1064,7 @@ body {
   /* or 103% */
   padding-left: 10%;
   letter-spacing: 0.25px;
+  margin-left:0%;
  }
 
  #dot_point{
