--- a/www/styles/style.css
+++ b/www/styles/style.css
@@ -1207,7 +1207,21 @@ html, body {
     width:50%;
     margin-right: 15%;
   }
+  #svg_construction{
+      cursor: pointer;
+  }
   
+  #svg_industry{
+      cursor: pointer;
+  }
+
+  #svg_distribution{
+      cursor: pointer;
+  }
+
+  #svg_it{
+      cursor: pointer;
+  }
   /* tablet*/
   @media only screen and (min-width: 609px) and (max-width: 992px) {
     #div_with_sectors{
