--- a/www/styles/style.css
+++ b/www/styles/style.css
@@ -239,9 +239,27 @@ nav ul li a {
 #dropdown-language{
     min-width: 70px;
     width: 70px;
+    text-align: center;
+    
 }
 #dropdown-language a{
     color: rgba(255, 255, 255, 0.38);
+    font-family: Ubuntu;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 14px;
+    letter-spacing: 0.35px;
+    text-transform: uppercase;
+    padding-top: 0px;
+    padding-bottom: 0px;
+    margin-top:0px;
+}
+.language-hr{
+    border: 0.3px solid rgba(255, 255, 255, 0.38);
+    margin-top: 0px;
+    width: 45%;
+    margin-top: -13px;
+    margin-bottom: -13px;
 }
 
 #dropdown-language a:hover{
