--- a/www/styles/style_especialistas.css
+++ b/www/styles/style_especialistas.css
@@ -1676,3 +1676,48 @@ body {
 
 
 /* CONTACT US - FIM */
+
+/* Zona Management Construction*/
+
+#complete_management{
+  display:flex;
+  background: #F5F5F5;
+}
+
+#complete_management_imgs{
+    position: relative;
+    padding-top: 100px;
+    padding-bottom: 20px;
+    height: 850px;
+    width:50%;
+}
+
+#half_anturio_img{
+  position: absolute;
+  margin-left: -95px;
+}
+
+#management_img{
+  position: relative;
+  width: 490px;
+  height: auto;
+  margin-left: 135px;
+  margin-top: 130px;
+}
+
+#complete_management_info{
+  align-self: flex-start;
+  font-family: Ubuntu;
+font-style: normal;
+font-weight: normal;
+font-size: 35px;
+line-height: 36px;
+/* or 103% */
+
+letter-spacing: 0.25px;
+
+color: #000000;
+  width:50%;
+}
+
+/* Fim Zona Management Construction */
