--- a/www/styles/style.css
+++ b/www/styles/style.css
@@ -1739,3 +1739,166 @@ html, body {
 
 
   /* CONTACT US - FIM */
+
+
+
+
+/* INICIO DIV CONSTRUÇÃO */
+#content-homepage-construction{
+    position: relative;
+}
+
+.sub-homepage-info{
+    width: 80%;
+    margin-left: 10%;
+    margin-right: 10%;
+    display: flex;
+    justify-content: space-between;
+    position: absolute;
+    bottom: 30px;
+}
+.sub-homepage-info-item{
+    width: 205px;
+
+
+}
+.sub-homepage-info-title{
+    font-family: 'Ubuntu';
+    font-style: normal;
+    font-weight: bold;
+    font-size: 12px;
+    line-height: 24px;
+    letter-spacing: 0.35px;
+    text-transform: uppercase;
+    color: #FFFFFF;
+}
+.sub-homepage-info-text{
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 20px;
+    letter-spacing: 0.25px;
+    color: #FFFFFF;
+}
+.sub-homepage-info-title svg{
+    padding-right: 5px;
+
+}
+.vertical-line{
+    border: 0.5px solid #FFFFFF;
+    transform: rotate(90deg);
+    width: 7%;
+    margin: 0px -7%;
+    align-self: center;
+}
+
+.white-button{
+    /* Button */
+
+    font-family: Ubuntu;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 16px;
+    text-align: center;
+    letter-spacing: 1.25px;
+    text-transform: uppercase;
+    color: #ED1C23;
+    background: #FFFFFF;
+    border-radius: 5px;
+    border: none;
+    padding: 15px 40px;
+    width: 350px;
+    height: 80px;
+    margin-right: 10%;
+    align-self: center;
+}
+.white-button:hover{
+    color: #FFFFFF;
+    background: transparent;;
+    border: solid 2px #FFFFFF;
+}
+.demo-section{
+    height: 362px;
+    background-color: #ED1C23;
+    display: flex;
+    justify-content: space-between;
+}
+.demo-section-text{
+    font-family: 'Ubuntu';
+    font-style: normal;
+    font-weight: normal;
+    font-size: 49px;
+    line-height: 56px;
+    color: #FFFFFF;
+    margin-left: 10%;
+    width: 50%;
+    align-self: center;
+    text-align: center;
+
+}
+
+@media(max-width: 1500px){
+    .white-button{
+        width: 250px;
+        height: 60px;
+    }
+}
+
+@media(max-width: 1115px) {
+    .sub-homepage-info{
+        width: 90%;
+        margin-left: 5%;
+        margin-right: 5%;
+    }
+
+}
+
+@media(max-width: 992px) {
+    .sub-homepage-info{
+        display: none;
+    }
+    .demo-section{
+        flex-direction: column;
+        align-content: center;
+        height: auto;
+    }
+    .demo-section-text{
+        width: 80%;
+        margin-left:0px;
+        margin-top: 30px;
+    }
+    .white-button{
+        margin-right:0px;
+        margin-bottom: 30px;
+        margin-top:10px
+    }
+
+}
+
+@media(max-width: 500px) {
+    .white-button{
+        width: 100%;
+        border-radius: 0px;
+    }
+    .demo-section-text{
+        font-size: 36px;
+    }
+}
+
+
+
+
+
+
+
+/* FIM DIV CONSTRUÇÃO */
+
+
+
+
+
+
+
+
