--- a/www/styles/style.css
+++ b/www/styles/style.css
@@ -1971,8 +1971,6 @@ html, body {
   font-weight: normal;
   font-size: 35px;
   line-height: 36px;
-  /* or 103% */
-  
   letter-spacing: 0.25px;
   
   color: #000000;
@@ -1988,12 +1986,7 @@ html, body {
   font-weight: 500;
   font-size: 16px;
   line-height: 24px;
-  /* identical to box height, or 150% */
-  
   letter-spacing: 0.15px;
-  
-  /* 01. Primary/800 */
-  
   color: #424242;
   text-decoration: none !important;
   
@@ -2011,8 +2004,6 @@ html, body {
   font-weight: normal;
   font-size: 14px;
   line-height: 20px;
-  /* or 143% */
-  
   letter-spacing: 0.25px;
   
   color: #000000;
@@ -2067,6 +2058,9 @@ html, body {
     
     .accordion_svgs{
       margin-left:10%;
+    }
+    .accordion{
+        margin-right: 1%;
     }
     
     }
