--- a/www/styles/style_especialistas.css
+++ b/www/styles/style_especialistas.css
@@ -2110,13 +2110,13 @@ color: #000000;
 #ideal_solution_chart{
   display: flex;
   flex-wrap: wrap;
-  margin-top: 62px;
   height: 537px;
   justify-content: center;
-  background-color: black;
+  background-color: #212121;
 }
 
 #ideal_solution_chart_text{
+  margin-top: 62px;
   
   /* Headline 3 */
   
@@ -2138,5 +2138,6 @@ color: #000000;
 #ideal_solution_chart_img{
   width: 1040px;
   height: 220px;
+  margin-bottom: 48px;
 }
   /* Fim Ideal Solution Chart Div */
