--- a/www/styles/style_especialistas.css
+++ b/www/styles/style_especialistas.css
@@ -2140,4 +2140,40 @@ color: #000000;
   height: 220px;
   margin-bottom: 48px;
 }
+/* Tablet */
+@media only screen and (max-width: 1142px) {
+  #ideal_solution_chart_img{
+    height: 80%;
+    width: 80%;
+  }
+  
+  #ideal_solution_chart_text{
+    font-size: 49px;
+line-height: 56px;
+  text-align: center;
+  }
+  #ideal_solution_chart{
+    height:auto;
+  }
+}
+
+/* Mobile */
+
+@media only screen and (max-width: 699px) {
+  #ideal_solution_chart_img{
+    height: 80%;
+    width: 80%;
+  }
+  
+  #ideal_solution_chart_text{
+    font-size: 24px;
+  line-height: 24px;
+  text-align: center;
+  }
+  #ideal_solution_chart{
+    height:auto;
+  }
+}
+
   /* Fim Ideal Solution Chart Div */
+
