--- a/www/styles/style_especialistas.css
+++ b/www/styles/style_especialistas.css
@@ -2110,7 +2110,6 @@ color: #000000;
 #ideal_solution_chart{
   display: flex;
   flex-wrap: wrap;
-  height: 537px;
   justify-content: center;
   background-color: #212121;
 }
@@ -2136,12 +2135,12 @@ color: #000000;
   }
   
 #ideal_solution_chart_img{
-  width: 1040px;
-  height: 220px;
+  width: 90%;
+    height: 53%;
   margin-bottom: 48px;
 }
 /* Tablet */
-@media only screen and (max-width: 1142px) {
+@media only screen and (max-width: 1300px) {
   #ideal_solution_chart_img{
     height: 80%;
     width: 80%;
